--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -40,6 +40,7 @@
     ul {
       list-style: none;
       padding: 0;
+      margin: 0;
 
       li {
         display: flex;
@@ -60,6 +61,15 @@
           background-color: #d1fae5;
           color: #047857;
           font-weight: bold;
+        }
+
+        a {
+          text-decoration: none;
+          color: inherit;
+          display: flex;
+          align-items: center;
+          gap: 12px;
+          width: 100%;
         }
 
         &.dropdown {
@@ -153,6 +163,7 @@
         font-weight: bold;
         color: #111827;
       }
+
       .role {
         font-size: 12px;
         color: #6b7280;
@@ -167,6 +178,15 @@
     margin-top: 16px;
     color: #6b7280;
     cursor: pointer;
+
+    button {
+      border: none;
+      background: none;
+      font-size: 14px;
+      color: inherit;
+      cursor: pointer;
+      padding: 0;
+    }
 
     &:hover {
       color: #ef4444;
