userService (service global para o projeto todo))

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -32,9 +32,8 @@
   </nav>
 
   <div class="profile">
-    <img src="https://via.placeholder.com/40" alt="User" />
     <div class="info">
-      <p class="name">{{ userEmail || 'Usuário' }}</p>
+      <p class="name">{{ userName || 'Usuário' }}</p>
       <p class="role">Usuário logado</p>
     </div>
   </div>
