--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -14,7 +14,9 @@
       <li routerLink="/graficos" routerLinkActive="active"><i class="icon">📈</i> Gráficos</li>
       <li routerLink="/cartoes" routerLinkActive="active"><i class="icon">💳</i> Cartões</li>
       <li routerLink="/missoes" routerLinkActive="active"><i class="icon">🎯</i> Missões</li>
-      <li routerLink="/contas" routerLinkActive="active"><i class="icon">🏦</i> Contas</li>
+      <li routerLink="/missoes" routerLinkActive="active"><i class="icon">🏦</i> Contas</li>
+
+
       <li routerLink="/transacoes" routerLinkActive="active"><i class="icon">💸</i> Transações</li>
     </ul>
 
