--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
       <li (click)="goToDashboard()"><i class="icon">📊</i> Dashboard</li>
       <li (click)="goToCreditCard()"><i class="icon">💳</i> Cartões</li>
       <li routerLink="/missoes" routerLinkActive="active"><i class="icon">🎯</i> Missões</li>
-      <li routerLink="/contas" routerLinkActive="active"><i class="icon">🏦</i> Contas</li>
+      <li (click)="goToCreateAccount()"><i class="icon">🏦</i> Contas</li>
       <li routerLink="/transacoes" routerLinkActive="active"><i class="icon">💸</i> Transações</li>
     </ul>
 
